data/derived/fa15/progs/unify/prog2196.ml.out
Characters 15-22:
  let _ = wwhile(collatz, 1);;
                 ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int * bool
       Type int is not compatible with type int * bool 
